--- a/templates/pvc.yaml
+++ b/templates/pvc.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: rook-ceph-block
+  storageClassName: nfs-client 
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: 5Gi
