--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
-description: Pi Hole
-name: pihole-helm
-icon: https://i2.wp.com/pi-hole.net/wp-content/uploads/2016/12/Vortex-R.png?resize=300%2C300&ssl=1
-version: 0.0.1
-keywords:
-- DNS 
+description: tinyproxy
+name: tinyproxy
+icon: https://alternative.me/icons2/tinyproxy.png
+version: 1.0.0
 sources:
 tillerVersion: ">=2.4.0"
