--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -18,62 +18,27 @@ spec:
       hostAliases:
       - ip: 127.0.0.1
         hostnames:
-        - pi.hole
-          # nodeSelector:
-          #kubernetes.io/hostname: randomstore
+        - tinyproxy
       containers:
       - name: {{ .Chart.Name }}
-        image: pihole/pihole:4.0.0-1
+        image: castironclay/tinyproxy_arm:v0.0.1
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         stdin: true
         tty: true
         resources:
           limits:
             memory: 200Mi
-        env:
-        - name: 'ServerIP'
-          value: '0.0.0.0'
-        - name: 'DNS1'
-          value: '1.1.1.1'
-        - name: 'DNS2'
-          value: '10.96.0.10'
         ports:
-        - name: webui
-          containerPort: 81 
-        - name: dns1
-          hostPort: 53
-          protocol: TCP 
-          containerPort: 53
-        - containerPort: 53
-          name: dns2
-          hostPort: 53
-          protocol: UDP
+        - containerPort: 8888
+          name: proxy
+          hostPort: 8888
+          protocol: TCP
+        arguments:
+          - '-p'
+          - '8888:8888'
+          - 'ANY'
 
-          # - name: {{ template "fullname" . }}-dns2
-          #   containerPort: 53
-        volumeMounts:
-            - mountPath: "/etc/pihole"
-              name: {{ template "fullname" . }}-pvc
-              subPath: "pihole"
-            - mountPath: "/etc/dnsmasq.d"
-              name: {{ template "fullname" . }}-pvc
-              subPath: "dnsmasq"
-            - mountPath: "/etc/dnsmasq.d/05-custom.conf"
-              name: {{ template "fullname" . }}-custom-config
-              subPath: 05-custom.conf
-            - mountPath: "/etc/pihole/whitelist.txt"
-              name: {{ template "fullname" . }}-custom-config-list
-              subPath: whitelist.txt
-            - mountPath: "/etc/pihole/adlists.list"
-              name: {{ template "fullname" . }}-custom-config-list
-              subPath: adlists.list
       volumes:
-        - name: {{ template "fullname" . }}-custom-config
-          configMap:
-            name: {{ template "fullname" . }}-custom-config
-        - name: {{ template "fullname" . }}-custom-config-list
-          configMap:
-            name: {{ template "fullname" . }}-custom-config-list
         - name: {{ template "fullname" . }}-pvc
           persistentVolumeClaim:
             claimName: {{ template "fullname" . }}-pvc
