--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
-description: tinyproxy
-name: tinyproxy
-icon: https://alternative.me/icons2/tinyproxy.png
-version: 1.0.0
+description: Pi Hole
+name: pihole
+icon: https://i2.wp.com/pi-hole.net/wp-content/uploads/2016/12/Vortex-R.png?resize=300%2C300&ssl=1
+version: 0.0.1
+keywords:
+- DNS 
 sources:
 tillerVersion: ">=2.4.0"
